<resources>
    <string name="app_name" translatable="false">Journey Tracking</string>
    <string name="title_activity_maps">Journey Tracking</string>
    <string name="Register">Sign up</string>
    <string name="create_new_account">Create new account</string>
    <string name="register_email_address">Enter your email address</string>
    <string name="register_repeat_password">Repeat the password</string>
    <string name="enter_password">Password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="Login">Sign in</string>
    <string name="guest">Guest</string>
    <string name="enter_a_secret_code">Enter a secret code</string>
    <string name="no_account_yeat">no account yeat?</string>
    <string name="signInGuest">Take me in</string>
    <string name="or">OR</string>
    <string name="member">Member space</string>

    <string name="title_activity_main">Main Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_home">My journey</string>
    <string name="sign_out">Sign out</string>
    <string name="my_account">My account</string>
    <string name="press_log_out">You\'re log out</string>

    <string name="IdTocken" translatable="false">418964118685-ftp6kr407282glb6urmlh0mlkccjqf87.apps.googleusercontent.com</string>
    <string name="register_email_error">A valid email is required</string>
    <string name="register_pwd_error">Password is required</string>
    <string name="register_pwd_length_error">Password should be at least 6 characters</string>
    <string name="register_pwd_not_equals">Passwords must be the same</string>
    <string name="register_user_created">User created</string>
    <string name="error">Error : </string>
    <string name="authentication">Authentication successful </string>
    <string name="signout_failed">Sign out failed</string>
    <string name="journey_title">Journey title</string>
    <string name="error_newJourneyItem_titleOrSecretKeyEmpty">Please insert a title</string>
    <string name="message_journey_added">Journey added</string>
    <string name="add_journey">Add Journey</string>
    <string name="access_key">Access key</string>
    <string name="owner">Owner</string>
    <string name="suppression_item_title">Suppression of the item</string>
    <string name="suppression_item_message">Do you want to continue the suppression of this item ?</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="step_title">Step title</string>
    <string name="enter_the_step_title">Enter the step title</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="step_number">Step number</string>
    <string name="error_creation_new_step">Please complete all fields</string>
    <string name="step_added">Step added to the Journey</string>
    <string name="add_new_step_title">Add a new step</string>
    <string name="get_location">Get location</string>
    <string name="access_key_copy">Access key copy to clipboard</string>
    <string name="title_add_step_journey_activity">Resume of my journey</string>
    <string name="map_title">Journey : </string>
    <string name="accessKey_not_valid">The access key is not valid</string>
    <string name="firebase_credential_error">The password is invalid.</string>
    <string name="firebase_user_error">"There is no user record corresponding to this identifier. "</string>
    <string name="firebase_collision_error">The email address is already in use by another account.</string>
</resources>